--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "svelte-check": "^4.1.0",
     "tslib": "^2.8.1",
     "typescript": "~5.6.2",
+    "unocss": "^0.65.1",
     "vite": "^6.0.1"
   }
 }
