--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -5,7 +5,10 @@ description = "Add your description here"
 authors = [
     { name = "moqumo", email = "mokumoku2166@gmail.com" }
 ]
-dependencies = []
+dependencies = [
+    "uvicorn>=0.34.0",
+    "fastapi>=0.115.6",
+]
 readme = "README.md"
 requires-python = ">= 3.8"
 
