--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 dependencies = [
     "uvicorn>=0.34.0",
     "fastapi>=0.115.6",
+    "python-dotenv>=1.0.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
